# dd99_wayland

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
cmake/modules/: FindLibUring.cmake
dd99_wayland/: CMakeLists.txt
dd99_wayland/NOTES/: Design
dd99_wayland/include/dd99/wayland/: client.hpp  config.hpp  engine.hpp  interface.hpp  interface_binder.hpp  interface_concept.hpp  message_marshaling.hpp  message_parsing.hpp  types.hpp  wayland_client.hpp
dd99_wayland/include/dd99/wayland/detail/: debug.hpp  interface_binder_base.hpp  zview.hpp
dd99_wayland/src/: engine.cpp  engine_data.hpp  object_map.hpp  thin_wayland_client.cpp
scanner/: CMakeLists.txt  out.hpp  scanner.cpp  scanner_old.cpp
scanner/old/: scanner_old.cpp
scanner/src/: argument.hpp  element.hpp  enumeration.hpp  formatting.hpp  interface.hpp  message.hpp  out.hpp  protocol.hpp  scanner.cpp
test_sources/: CMakeLists.txt  test1.cpp
test_sources/server_test1/: CMakeLists.txt  server_test1.cpp
